# stock-portfolio-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.alpine  alembic.ini  build.sh  docker-compose.yml  pyproject.toml
.claude/agents/: python-fullstack-architect.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260406_0000_a3f7c9e1b2d4_create_stock_and_holding_tables.py  20260406_0001_b5e8d2f3a1c6_add_current_price_to_stock.py  20260406_0002_c7a1e4f8b3d5_create_price_cache_table.py  20260411_0003_d2b9e5f1a8c4_add_wkn_to_stock.py  20260411_0004_e3c6f7a2b9d1_remove_ticker_use_wkn_as_sole_identifier.py  20260417_0000_d9b2f6a4e8c1_create_fx_rate_table.py  20260418_0000_e1c3a5b9f7d2_add_asset_type_to_stock.py  20260522_0000_f2a4c6e8d1b3_add_transaction_table.py  20260522_0001_a8b4e2c6d9f1_truncate_legacy_holdings.py  20260522_0002_b4c8d6e2f9a3_drop_stock_current_price.py  20260530_0000_c9d1e3f5a7b2_backfill_ing_external_uuid.py
app/: __init__.py  config.py  database.py  main.py  scheduler.py
app/models/: __init__.py  fx_rate.py  holding.py  price_cache.py  stock.py  transaction.py
tests/: __init__.py  conftest.py  test_admin.py  test_chart_cache.py  test_comdirect_dividend_parser.py  test_comdirect_parser.py  test_comdirect_ref.py  test_dashboard.py  test_fx_service.py  test_health.py  test_holdings.py  test_holdings_service.py  test_htmx_crypto.py  test_import_cache.py  test_import_cleanup.py  test_import_pdf.py  test_import_xml_resolve_row.py  test_ing_parser.py  test_openfigi_lookup.py  test_pdf_parser.py  test_portfolio_page.py  test_portfolio_performance_importer.py  test_portfolio_service.py  test_portfolio_summary.py  test_price_cache.py  test_price_service.py  test_report_service.py  test_scheduler.py  test_stock_detail_page.py  test_transaction_import_service.py  test_transaction_model.py  test_wkn_validation.py  test_xml_security_resolver.py
(+64 files in other folders)
