[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-portfolio-tracker"
version = "0.1.0"
description = "A stock portfolio tracker with broker PDF import, monthly reports, and email delivery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",

    # Validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Email
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",

    # PDF parsing
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",

    # HTTP client (for stock price fetching)
    "httpx>=0.27.0",

    # Stock data
    "yfinance>=0.2.40",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-passlib>=1.7.7",
]

[project.scripts]
serve = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --- Ruff (linting + formatting) ---
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

# --- Mypy ---
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# --- Pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
